// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders 1`] = `
.c0 {
  -webkit-transition: 0.3s ease all;
  transition: 0.3s ease all;
  border: none;
  outline: none;
  background-color: #40A9F3;
  background-size: 720%;
  border: 2px solid #66B9F4;
  border-radius: 4px;
  box-sizing: border-box;
  font-size: 1.125em;
  text-align: center;
  color: white;
  font-weight: 400;
  width: inherit;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 600;
  cursor: pointer;
}

.c0:hover {
  background-color: #66b9f4;
}

<button
  className="c0"
  style={
    Object {
      "padding": "0.65em 2.25em",
    }
  }
>
  Test
</button>
`;

exports[`Button renders disabled 1`] = `
.c0 {
  -webkit-transition: 0.3s ease all;
  transition: 0.3s ease all;
  border: none;
  outline: none;
  background: rgb(25,29,31);
  background-size: 720%;
  border: 161A1C;
  border-radius: 4px;
  box-sizing: border-box;
  font-size: 1.125em;
  text-align: center;
  color: rgb(69,79,84);
  font-weight: 400;
  width: inherit;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 600;
}

.c0:hover {
  background: rgb(25,29,31);
}

<button
  className="c0"
  disabled={true}
  style={
    Object {
      "padding": "0.65em 2.25em",
    }
  }
>
  Test
</button>
`;

exports[`Button renders href 1`] = `
.c0 {
  -webkit-transition: 0.3s ease all;
  transition: 0.3s ease all;
  border: none;
  outline: none;
  background-color: #40A9F3;
  background-size: 720%;
  border: 2px solid #66B9F4;
  border-radius: 4px;
  box-sizing: border-box;
  font-size: 1.125em;
  text-align: center;
  color: white;
  font-weight: 400;
  width: inherit;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 600;
  cursor: pointer;
}

.c0:hover {
  background-color: #66b9f4;
}

<a
  className="c0"
  href="https://ivesvh.com"
  style={
    Object {
      "padding": "0.65em 2.25em",
    }
  }
>
  Test
</a>
`;

exports[`Button renders onClick 1`] = `
.c0 {
  -webkit-transition: 0.3s ease all;
  transition: 0.3s ease all;
  border: none;
  outline: none;
  background-color: #40A9F3;
  background-size: 720%;
  border: 2px solid #66B9F4;
  border-radius: 4px;
  box-sizing: border-box;
  font-size: 1.125em;
  text-align: center;
  color: white;
  font-weight: 400;
  width: inherit;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 600;
  cursor: pointer;
}

.c0:hover {
  background-color: #66b9f4;
}

<button
  className="c0"
  onClick={[Function]}
  style={
    Object {
      "padding": "0.65em 2.25em",
    }
  }
>
  Test
</button>
`;

exports[`Button renders properties 1`] = `
.c0 {
  -webkit-transition: 0.3s ease all;
  transition: 0.3s ease all;
  border: none;
  outline: none;
  background-color: #40A9F3;
  background-size: 720%;
  border: 2px solid #66B9F4;
  border-radius: 4px;
  box-sizing: border-box;
  font-size: 1.125em;
  text-align: center;
  color: white;
  font-weight: 400;
  width: inherit;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 600;
  cursor: pointer;
}

.c0:hover {
  background-color: #66b9f4;
}

<button
  className="c0"
  style={
    Object {
      "fontSize": "0.875em",
      "padding": "0.5em 0.7em",
    }
  }
>
  Test
</button>
`;

exports[`Button renders secondary 1`] = `
.c0 {
  -webkit-transition: 0.3s ease all;
  transition: 0.3s ease all;
  border: none;
  outline: none;
  background: #3A4B5D;
  background-size: 720%;
  border: 1px solid #56a0d6;
  border-radius: 4px;
  box-sizing: border-box;
  font-size: 1.125em;
  text-align: center;
  color: #56a0d6;
  font-weight: 400;
  width: inherit;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 600;
  cursor: pointer;
}

.c0:hover {
  background: #3A4B5D;
}

<button
  className="c0"
  style={
    Object {
      "padding": "0.65em 2.25em",
    }
  }
>
  Test
</button>
`;

exports[`Button renders to 1`] = `
.c0 {
  -webkit-transition: 0.3s ease all;
  transition: 0.3s ease all;
  border: none;
  outline: none;
  background-color: #40A9F3;
  background-size: 720%;
  border: 2px solid #66B9F4;
  border-radius: 4px;
  box-sizing: border-box;
  font-size: 1.125em;
  text-align: center;
  color: white;
  font-weight: 400;
  width: inherit;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 600;
  cursor: pointer;
}

.c0:hover {
  background-color: #66b9f4;
}

<a
  className="c0"
  href="https://ivesvh.com"
  onClick={[Function]}
  style={
    Object {
      "padding": "0.65em 2.25em",
    }
  }
>
  Test
</a>
`;
